--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,6 @@
     © {{ site.time | date: '%Y' }} {{ site.name }} <a class="link" href="{{ site.url }}/feed.xml" target="_blank"><svg class="icon icon-rss"><use xlink:href="#icon-rss"></use></svg></a>
 
     <p class="extra">
-        Content is licensed under <a class="link" href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>. The website is open source. Please <a href="https://github.com/{{ site.github.repository_nwo }}/edit/{{ site.branch }}/{{ page.path }}">help improve this page</a>.
+        Content is licensed under <a class="link" href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>. The website is open source. Please <a href="https://github.com/{{ site.repository }}/edit/{{ site.branch }}/{{ page.path }}">help improve this page</a>.
     </p>
 </footer>
